# SqueakView

./: .gitignore  LICENSE  README.md  config.py  pyproject.workspace.bak  squeakview_gui.py
AnalysisToolKit/: distance_analysis.ipynb
Arduino Firmware/FED_2040_PySerial/: FED_2040_PySerial.ino
DeepStream-Yolo/: calibration_app_config.txt  deepstream_app_config.txt
DeepStream-Yolo/configs/: mousehouse_pose_fp16.txt  mousehouse_pose_fp32.txt  yolo11s_distilledFT_fp16.txt  yolo26npose_distilled_FT_fp16.txt
DeepStream-Yolo/nvdsinfer_custom_impl_Yolo/: calibrator.cpp  yolo_obb_parser.cpp  yolo_pose_parser.cpp
DeepStream-Yolo/nvdsinfer_custom_impl_Yolo_int8test/: Makefile  quant_utils.cu  quant_utils.h  yolo.cpp  yoloPlugins.cpp  yolo_pose_parser.cpp
DeepStream-Yolo/utils/: build_engine.py  export_yolo11.py
MouseHouse CAD files/: Cage_Base.step  Cage_Lid.step  FED3_Insert.step  FLIR_Camera_Top_Mount.step  Food_Hopper.step  Hopper_Disk.step  Lickometer_Insert.step
apps/capture/: main.py  pipeline.py
apps/inference/: main.py  runner.py
apps/operator/: main.py
build-engine/: build_engine.ipynb  main.py  pyproject.toml
common/: dashboard.py  run_context.py  serial.py
debug/: check_camera_low_vs_frames.ipynb
environments/capture/: pyproject.toml
environments/capture/jetson_capture.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
environments/control/: pyproject.toml
environments/inference/: pyproject.toml
runs/: .latest_run
squeakview/: __init__.py
tasks/: default.yaml  gonogo.yaml
wheel_files/: pyds-1.2.0-cp310-cp310-linux_aarch64.whl
(+8 files in other folders)
