[project]
name = "build-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "ipykernel>=7.1.0",
  "numpy==1.26.4",
  "onnxruntime>=1.23.2",
  "onnxslim==0.1.78",
  "pyds",
  "ultralytics>=8.3.235",
]

[tool.uv.sources]
pyds = { path = '/home/jetson/Desktop/squeakview/wheel_files/pyds-1.2.0-cp310-cp310-linux_aarch64.whl' }

